parser/PythonParser.py
# Generated from Python.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class PythonParser ( Parser ):

    grammarFileName = "Python.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'def'", "'return'", "'print'", 
                     "'if'", "'elif'", "'else'", "'while'", "'for'", "'or'", 
                     "'and'", "'not'", "'True'", "'False'", "','", "':'", 
                     "';'", "'=='", "'>='", "'<='", "'<>'", "'!='", "'~'", 
                     "'|'", "'^'", "'&'", "'+'", "'-'", "'%'", "'//'", "'/'", 
                     "'*'", "'<'", "'>'", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "'='" ]

    symbolicNames = [ "<INVALID>", "NL", "DEF", "RETURN", "PRINT", "IF", 
                      "ELIF", "ELSE", "WHILE", "FOR", "OR", "AND", "NOT", 
                      "TRUE", "FALSE", "COMMA", "COLON", "SEMI_COLON", "EQUALS", 
                      "GT_EQ", "LT_EQ", "NOT_EQ_1", "NOT_EQ_2", "NOT_OP", 
                      "OR_OP", "XOR", "AND_OP", "ADD", "MINUS", "MOD", "IDIV", 
                      "DIV", "STAR", "LESS_THAN", "GREATER_THAN", "OPEN_PAREN", 
                      "CLOSE_PAREN", "OPEN_BRACE", "CLOSE_BRACE", "OPEN_BRACKET", 
                      "CLOSE_BRACKET", "ASSIGN", "IDENTIFIER", "NUMBER", 
                      "WHITESPACE", "COMMENT", "SHORT_STRING", "INDENT", 
                      "DEDENT", "LINE_BREAK" ]

    RULE_program = 0
    RULE_stmt = 1
    RULE_compound_stmt = 2
    RULE_suite = 3
    RULE_elif_clause = 4
    RULE_else_clause = 5
    RULE_funcdef = 6
    RULE_argslist = 7
    RULE_simple_stmt = 8
    RULE_small_stmt = 9
    RULE_assign_part = 10
    RULE_logical_test = 11
    RULE_comparison = 12
    RULE_expr = 13
    RULE_func_call = 14

    ruleNames =  [ "program", "stmt", "compound_stmt", "suite", "elif_clause", 
                   "else_clause", "funcdef", "argslist", "simple_stmt", 
                   "small_stmt", "assign_part", "logical_test", "comparison", 
                   "expr", "func_call" ]

    EOF = Token.EOF
    NL=1
    DEF=2
    RETURN=3
    PRINT=4
    IF=5
    ELIF=6
    ELSE=7
    WHILE=8
    FOR=9
    OR=10
    AND=11
    NOT=12
    TRUE=13
    FALSE=14
    COMMA=15
    COLON=16
    SEMI_COLON=17
    EQUALS=18
    GT_EQ=19
    LT_EQ=20
    NOT_EQ_1=21
    NOT_EQ_2=22
    NOT_OP=23
    OR_OP=24
    XOR=25
    AND_OP=26
    ADD=27
    MINUS=28
    MOD=29
    IDIV=30
    DIV=31
    STAR=32
    LESS_THAN=33
    GREATER_THAN=34
    OPEN_PAREN=35
    CLOSE_PAREN=36
    OPEN_BRACE=37
    CLOSE_BRACE=38
    OPEN_BRACKET=39
    CLOSE_BRACKET=40
    ASSIGN=41
    IDENTIFIER=42
    NUMBER=43
    WHITESPACE=44
    COMMENT=45
    SHORT_STRING=46
    INDENT=47
    DEDENT=48
    LINE_BREAK=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PythonParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StmtContext)
            else:
                return self.getTypedRuleContext(PythonParser.StmtContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = PythonParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PythonParser.DEF) | (1 << PythonParser.RETURN) | (1 << PythonParser.PRINT) | (1 << PythonParser.IF) | (1 << PythonParser.WHILE) | (1 << PythonParser.IDENTIFIER))) != 0):
                self.state = 30
                self.stmt()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 36
            self.match(PythonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self):
            return self.getTypedRuleContext(PythonParser.Simple_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(PythonParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = PythonParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 40
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PythonParser.RETURN, PythonParser.PRINT, PythonParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.simple_stmt()
                pass
            elif token in [PythonParser.DEF, PythonParser.IF, PythonParser.WHILE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.compound_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Compound_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_compound_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhileContext(Compound_stmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.Compound_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(PythonParser.WHILE, 0)
        def logical_test(self):
            return self.getTypedRuleContext(PythonParser.Logical_testContext,0)

        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)
        def suite(self):
            return self.getTypedRuleContext(PythonParser.SuiteContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class IfContext(Compound_stmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.Compound_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(PythonParser.IF, 0)
        def logical_test(self):
            return self.getTypedRuleContext(PythonParser.Logical_testContext,0)

        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)
        def suite(self):
            return self.getTypedRuleContext(PythonParser.SuiteContext,0)

        def elif_clause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.Elif_clauseContext)
            else:
                return self.getTypedRuleContext(PythonParser.Elif_clauseContext,i)

        def else_clause(self):
            return self.getTypedRuleContext(PythonParser.Else_clauseContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)


    class FuncDefContext(Compound_stmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.Compound_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcdef(self):
            return self.getTypedRuleContext(PythonParser.FuncdefContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDef" ):
                listener.enterFuncDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDef" ):
                listener.exitFuncDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDef" ):
                return visitor.visitFuncDef(self)
            else:
                return visitor.visitChildren(self)



    def compound_stmt(self):

        localctx = PythonParser.Compound_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_compound_stmt)
        self._la = 0 # Token type
        try:
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PythonParser.IF]:
                localctx = PythonParser.IfContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.match(PythonParser.IF)
                self.state = 43
                self.logical_test(0)
                self.state = 44
                self.match(PythonParser.COLON)
                self.state = 45
                self.suite()
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==PythonParser.ELIF:
                    self.state = 46
                    self.elif_clause()
                    self.state = 51
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==PythonParser.ELSE:
                    self.state = 52
                    self.else_clause()


                pass
            elif token in [PythonParser.WHILE]:
                localctx = PythonParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.match(PythonParser.WHILE)
                self.state = 56
                self.logical_test(0)
                self.state = 57
                self.match(PythonParser.COLON)
                self.state = 58
                self.suite()
                pass
            elif token in [PythonParser.DEF]:
                localctx = PythonParser.FuncDefContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.funcdef()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SuiteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_suite

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SuiteInLineContext(SuiteContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.SuiteContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def simple_stmt(self):
            return self.getTypedRuleContext(PythonParser.Simple_stmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSuiteInLine" ):
                listener.enterSuiteInLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSuiteInLine" ):
                listener.exitSuiteInLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSuiteInLine" ):
                return visitor.visitSuiteInLine(self)
            else:
                return visitor.visitChildren(self)


    class SuiteBlockContext(SuiteContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.SuiteContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INDENT(self):
            return self.getToken(PythonParser.INDENT, 0)
        def DEDENT(self):
            return self.getToken(PythonParser.DEDENT, 0)
        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StmtContext)
            else:
                return self.getTypedRuleContext(PythonParser.StmtContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSuiteBlock" ):
                listener.enterSuiteBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSuiteBlock" ):
                listener.exitSuiteBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSuiteBlock" ):
                return visitor.visitSuiteBlock(self)
            else:
                return visitor.visitChildren(self)



    def suite(self):

        localctx = PythonParser.SuiteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_suite)
        self._la = 0 # Token type
        try:
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PythonParser.RETURN, PythonParser.PRINT, PythonParser.IDENTIFIER]:
                localctx = PythonParser.SuiteInLineContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.simple_stmt()
                pass
            elif token in [PythonParser.INDENT]:
                localctx = PythonParser.SuiteBlockContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.match(PythonParser.INDENT)
                self.state = 66 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 65
                    self.stmt()
                    self.state = 68 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PythonParser.DEF) | (1 << PythonParser.RETURN) | (1 << PythonParser.PRINT) | (1 << PythonParser.IF) | (1 << PythonParser.WHILE) | (1 << PythonParser.IDENTIFIER))) != 0)):
                        break

                self.state = 70
                self.match(PythonParser.DEDENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Elif_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELIF(self):
            return self.getToken(PythonParser.ELIF, 0)

        def logical_test(self):
            return self.getTypedRuleContext(PythonParser.Logical_testContext,0)


        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def suite(self):
            return self.getTypedRuleContext(PythonParser.SuiteContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_elif_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElif_clause" ):
                listener.enterElif_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElif_clause" ):
                listener.exitElif_clause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElif_clause" ):
                return visitor.visitElif_clause(self)
            else:
                return visitor.visitChildren(self)




    def elif_clause(self):

        localctx = PythonParser.Elif_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_elif_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(PythonParser.ELIF)
            self.state = 75
            self.logical_test(0)
            self.state = 76
            self.match(PythonParser.COLON)
            self.state = 77
            self.suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Else_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(PythonParser.ELSE, 0)

        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def suite(self):
            return self.getTypedRuleContext(PythonParser.SuiteContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_else_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse_clause" ):
                listener.enterElse_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse_clause" ):
                listener.exitElse_clause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse_clause" ):
                return visitor.visitElse_clause(self)
            else:
                return visitor.visitChildren(self)




    def else_clause(self):

        localctx = PythonParser.Else_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_else_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(PythonParser.ELSE)
            self.state = 80
            self.match(PythonParser.COLON)
            self.state = 81
            self.suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncdefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(PythonParser.DEF, 0)

        def IDENTIFIER(self):
            return self.getToken(PythonParser.IDENTIFIER, 0)

        def OPEN_PAREN(self):
            return self.getToken(PythonParser.OPEN_PAREN, 0)

        def CLOSE_PAREN(self):
            return self.getToken(PythonParser.CLOSE_PAREN, 0)

        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def suite(self):
            return self.getTypedRuleContext(PythonParser.SuiteContext,0)


        def argslist(self):
            return self.getTypedRuleContext(PythonParser.ArgslistContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_funcdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdef" ):
                listener.enterFuncdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdef" ):
                listener.exitFuncdef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdef" ):
                return visitor.visitFuncdef(self)
            else:
                return visitor.visitChildren(self)




    def funcdef(self):

        localctx = PythonParser.FuncdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcdef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(PythonParser.DEF)
            self.state = 84
            self.match(PythonParser.IDENTIFIER)
            self.state = 85
            self.match(PythonParser.OPEN_PAREN)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PythonParser.IDENTIFIER:
                self.state = 86
                self.argslist()


            self.state = 89
            self.match(PythonParser.CLOSE_PAREN)
            self.state = 90
            self.match(PythonParser.COLON)
            self.state = 91
            self.suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgslistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_argslist

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ArgsListContext(ArgslistContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.ArgslistContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.IDENTIFIER)
            else:
                return self.getToken(PythonParser.IDENTIFIER, i)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.COMMA)
            else:
                return self.getToken(PythonParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgsList" ):
                listener.enterArgsList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgsList" ):
                listener.exitArgsList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgsList" ):
                return visitor.visitArgsList(self)
            else:
                return visitor.visitChildren(self)



    def argslist(self):

        localctx = PythonParser.ArgslistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_argslist)
        self._la = 0 # Token type
        try:
            localctx = PythonParser.ArgsListContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(PythonParser.IDENTIFIER)
            self.state = 96 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 94
                self.match(PythonParser.COMMA)
                self.state = 95
                self.match(PythonParser.IDENTIFIER)
                self.state = 98 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==PythonParser.COMMA):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Simple_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def small_stmt(self):
            return self.getTypedRuleContext(PythonParser.Small_stmtContext,0)


        def LINE_BREAK(self):
            return self.getToken(PythonParser.LINE_BREAK, 0)

        def EOF(self):
            return self.getToken(PythonParser.EOF, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_simple_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_stmt" ):
                listener.enterSimple_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_stmt" ):
                listener.exitSimple_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_stmt" ):
                return visitor.visitSimple_stmt(self)
            else:
                return visitor.visitChildren(self)




    def simple_stmt(self):

        localctx = PythonParser.Simple_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_simple_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.small_stmt()
            self.state = 101
            _la = self._input.LA(1)
            if not(_la==PythonParser.EOF or _la==PythonParser.LINE_BREAK):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Small_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_small_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PrintContext(Small_stmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.Small_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PRINT(self):
            return self.getToken(PythonParser.PRINT, 0)
        def OPEN_PAREN(self):
            return self.getToken(PythonParser.OPEN_PAREN, 0)
        def CLOSE_PAREN(self):
            return self.getToken(PythonParser.CLOSE_PAREN, 0)
        def IDENTIFIER(self):
            return self.getToken(PythonParser.IDENTIFIER, 0)
        def SHORT_STRING(self):
            return self.getToken(PythonParser.SHORT_STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)


    class FuncCallContext(Small_stmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.Small_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def func_call(self):
            return self.getTypedRuleContext(PythonParser.Func_callContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncCall" ):
                listener.enterFuncCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncCall" ):
                listener.exitFuncCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncCall" ):
                return visitor.visitFuncCall(self)
            else:
                return visitor.visitChildren(self)


    class ReturnContext(Small_stmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.Small_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RETURN(self):
            return self.getToken(PythonParser.RETURN, 0)
        def argslist(self):
            return self.getTypedRuleContext(PythonParser.ArgslistContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn" ):
                listener.enterReturn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn" ):
                listener.exitReturn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn" ):
                return visitor.visitReturn(self)
            else:
                return visitor.visitChildren(self)


    class AssignContext(Small_stmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.Small_stmtContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(PythonParser.IDENTIFIER, 0)
        def assign_part(self):
            return self.getTypedRuleContext(PythonParser.Assign_partContext,0)

        def ASSIGN(self):
            return self.getToken(PythonParser.ASSIGN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)



    def small_stmt(self):
